--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
+            bash ./misc/download_sdk.sh
             nosetests -v ./test/*.py
 
       - store_artifacts:
